minor refactoring finished chat function calls added test for chatparser added dice token property type